==> arda-bildik/ADS1256_library/src/ADS1256.cpp <==
#include "Arduino.h"
#include "ADS1256.h"
#include "SPI.h"

void ADS1256::stopConversion()  //Sending SDATAC to stop the continuous conversion
{
  SPI.beginTransaction(SPISettings(1920000, MSBFIRST, SPI_MODE1));
  SPI.transfer(0b00001111);     //Send SDATAC to the ADC
  digitalWrite(_CS_pin, HIGH);  //We finished the command sequence, so we switch it back to HIGH
  SPI.endTransaction();

  _isAcquisitionRunning = false;  //Reset to false, so the MCU will be able to start a new conversion
}

void ADS1256::setGPIO(int dir0, int dir1, int dir2, int dir3)  //Setting GPIO
{
  //Default: 11100000 - DEC: 224 - Ref: p32 I/O section
  //Sets D3-D0 as input or output
  int GPIO_bit7, GPIO_bit6, GPIO_bit5, GPIO_bit4;

  //Bit7: DIR3
  if (dir3 == 1) {
    GPIO_bit7 = 1;  //D3 is input (default)
  } else {
    GPIO_bit7 = 0;  //D3 is output
  }
  bitWrite(_GPIO, 7, GPIO_bit7);
  //-----------------------------------------------------
  //Bit6: DIR2
  if (dir2 == 1) {
    GPIO_bit6 = 1;  //D2 is input (default)
  } else {
    GPIO_bit6 = 0;  //D2 is output
  }
  bitWrite(_GPIO, 6, GPIO_bit6);
  //-----------------------------------------------------
  //Bit5: DIR1
  if (dir1 == 1) {
    GPIO_bit5 = 1;  //D1 is input (default)
  } else {
    GPIO_bit5 = 0;  //D1 is output
  }
  bitWrite(_GPIO, 5, GPIO_bit5);
  //-----------------------------------------------------
  //Bit4: DIR0
  if (dir0 == 1) {
    GPIO_bit4 = 1;  //D0 is input
  } else {
    GPIO_bit4 = 0;  //D0 is output (default)
  }
  bitWrite(_GPIO, 4, GPIO_bit4);
  //-----------------------------------------------------

  writeRegister(IO_REG, _GPIO);
  delay(100);
}

void ADS1256::sendDirectCommand(uint8_t directCommand) {
  //Direct commands can be found in the datasheet Page 34, Table 24.
  SPI.beginTransaction(SPISettings(1920000, MSBFIRST, SPI_MODE1));

  digitalWrite(_CS_pin, LOW);  //REF: P34: "CS must stay low during the entire command sequence"
  delayMicroseconds(5);
  SPI.transfer(directCommand);  //Send Command
  delayMicroseconds(5);
  digitalWrite(_CS_pin, HIGH);  //REF: P34: "CS must stay low during the entire command sequence"

  SPI.endTransaction();
}

void ADS1256::writeRegister(uint8_t registerAddress, uint8_t registerValueToWrite) {
  SPI.beginTransaction(SPISettings(1920000, MSBFIRST, SPI_MODE1));
  //SPI_MODE1 = output edge: rising, data capture: falling; clock polarity: 0, clock phase: 1.

  digitalWrite(_CS_pin, LOW);  //CS must stay LOW during the entire sequence [Ref: P34, T24]

  delayMicroseconds(5);  //see t6 in the datasheet

  SPI.transfer(0x50 | registerAddress);  // 0x50 = 01010000 = WREG

  SPI.transfer(0x00);  //2nd (empty) command byte

  SPI.transfer(registerValueToWrite);  //pass the value to the register

  digitalWrite(_CS_pin, HIGH);
  SPI.endTransaction();
  delay(100);
}

long ADS1256::readRegister(uint8_t registerAddress)  //Reading a register
{
  SPI.beginTransaction(SPISettings(1920000, MSBFIRST, SPI_MODE1));
  //SPI_MODE1 = output edge: rising, data capture: falling; clock polarity: 0, clock phase: 1.

  digitalWrite(_CS_pin, LOW);  //CS must stay LOW during the entire sequence [Ref: P34, T24]

  SPI.transfer(0x10 | registerAddress);  //0x10 = 0001000 = RREG - OR together the two numbers (command + address)

  SPI.transfer(0x00);  //2nd (empty) command byte

  delayMicroseconds(5);  //see t6 in the datasheet

  _registerValuetoRead = SPI.transfer(0xFF);  //read out the register value

  digitalWrite(_CS_pin, HIGH);
  SPI.endTransaction();
  delay(100);
  return _registerValuetoRead;
}

long ADS1256::readSingle()  //Reading a single value ONCE using the RDATA command
{
  SPI.beginTransaction(SPISettings(1920000, MSBFIRST, SPI_MODE1));
  digitalWrite(_CS_pin, LOW);        //REF: P34: "CS must stay low during the entire command sequence"
  while (digitalRead(_DRDY_pin)) {}  //wait for DRDY to go LOW (cheap solution)
  SPI.transfer(0b00000001);          //Issue RDATA (0000 0001) command
  delayMicroseconds(7);              //Wait t6 time (~6.51 us) REF: P34, FIG:30.

  _outputBuffer[0] = SPI.transfer(0);  // MSB
  _outputBuffer[1] = SPI.transfer(0);  // Mid-byte
  _outputBuffer[2] = SPI.transfer(0);  // LSB

  //Shifting and combining the above three items into a single, 24-bit number
  _outputValue = ((long)_outputBuffer[0] << 16) | ((long)_outputBuffer[1] << 8) | (_outputBuffer[2]);

  digitalWrite(_CS_pin, HIGH);  //We finished the command sequence, so we set CS to HIGH
  SPI.endTransaction();

  return (_outputValue);
}

long ADS1256::readSingleContinuous()  //Reads the recently selected input channel using RDATAC
{

  if (_isAcquisitionRunning == false) {
    _isAcquisitionRunning = true;
    SPI.beginTransaction(SPISettings(1920000, MSBFIRST, SPI_MODE1));
    digitalWrite(_CS_pin, LOW);  //REF: P34: "CS must stay low during the entire command sequence"
    while (digitalRead(_DRDY_pin)) {}
    SPI.transfer(0b00000011);  //Issue RDATAC (0000 0011)
    delayMicroseconds(7);      //Wait t6 time (~6.51 us) REF: P34, FIG:30.

  } else {
    while (digitalRead(_DRDY_pin)) {}
  }


  _outputBuffer[0] = SPI.transfer(0);  // MSB
  _outputBuffer[1] = SPI.transfer(0);  // Mid-byte
  _outputBuffer[2] = SPI.transfer(0);  // LSB

  _outputValue = ((long)_outputBuffer[0] << 16) | ((long)_outputBuffer[1] << 8) | (_outputBuffer[2]);

  return _outputValue;
}

long ADS1256::cycleSingle() {
  if (_isAcquisitionRunning == false) {
    _isAcquisitionRunning = true;
    _cycle = 0;
    SPI.beginTransaction(SPISettings(1920000, MSBFIRST, SPI_MODE1));
    digitalWrite(_CS_pin, LOW);  //CS must stay LOW during the entire sequence [Ref: P34, T24]
    SPI.transfer(0x50 | 1);      // 0x50 = WREG //1 = MUX
    SPI.transfer(0x00);
    SPI.transfer(SING_0);  //AIN0+AINCOM
    digitalWrite(_CS_pin, HIGH);
    delay(50);
    digitalWrite(_CS_pin, LOW);  //CS must stay LOW during the entire sequence [Ref: P34, T24]
  } else {
  }

  if (_cycle < 8) {
    _outputValue = 0;
    while (digitalRead(_DRDY_pin)) {}
    //Step 1. - Updating MUX
    switch (_cycle) {
      //Channels are written manually
      case 0:                    //Channel 2
        SPI.transfer(0x50 | 1);  // 0x50 = WREG //1 = MUX
        SPI.transfer(0x00);
        SPI.transfer(SING_1);  //AIN1+AINCOM
        break;

      case 1:                    //Channel 3
        SPI.transfer(0x50 | 1);  // 0x50 = WREG //1 = MUX
        SPI.transfer(0x00);
        SPI.transfer(SING_2);  //AIN2+AINCOM
        break;

      case 2:                    //Channel 4
        SPI.transfer(0x50 | 1);  // 0x50 = WREG //1 = MUX
        SPI.transfer(0x00);
        SPI.transfer(SING_3);  //AIN3+AINCOM
        break;

      case 3:                    //Channel 5
        SPI.transfer(0x50 | 1);  // 0x50 = WREG //1 = MUX
        SPI.transfer(0x00);
        SPI.transfer(SING_4);  //AIN4+AINCOM
        break;

      case 4:                    //Channel 6
        SPI.transfer(0x50 | 1);  // 0x50 = WREG //1 = MUX
        SPI.transfer(0x00);
        SPI.transfer(SING_5);  //AIN5+AINCOM
        break;

      case 5:                    //Channel 7
        SPI.transfer(0x50 | 1);  // 0x50 = WREG //1 = MUX
        SPI.transfer(0x00);
        SPI.transfer(SING_6);  //AIN6+AINCOM
        break;

      case 6:                    //Channel 8
        SPI.transfer(0x50 | 1);  // 0x50 = WREG //1 = MUX
        SPI.transfer(0x00);
        SPI.transfer(SING_7);  //AIN7+AINCOM
        break;

      case 7:                    //Channel 1
        SPI.transfer(0x50 | 1);  // 0x50 = WREG //1 = MUX
        SPI.transfer(0x00);
        SPI.transfer(SING_0);  //AIN0+AINCOM
        break;
    }
    //Step 2.
    SPI.transfer(0b11111100);  //SYNC
    delayMicroseconds(4);      //t11 delay 24*tau = 3.125 us //delay should be larger, so we delay by 4 us
    SPI.transfer(0b11111111);  //WAKEUP

    //Step 3.
    //Issue RDATA (0000 0001) command
    SPI.transfer(0b00000001);
    delayMicroseconds(7);  //Wait t6 time (~6.51 us) REF: P34, FIG:30.

    _outputBuffer[0] = SPI.transfer(0x0F);  // MSB
    _outputBuffer[1] = SPI.transfer(0x0F);  // Mid-byte
    _outputBuffer[2] = SPI.transfer(0x0F);  // LSB

    _outputValue = ((long)_outputBuffer[0] << 16) | ((long)_outputBuffer[1] << 8) | (_outputBuffer[2]);

    _cycle++;  //Increase cycle - This will move to the next MUX input channel
    if (_cycle == 8) {
      _cycle = 0;  //Reset to 0 - Restart conversion from the 1st input channel
    }
  }

  return _outputValue;
}

long ADS1256::cycleDifferential() {
  if (_isAcquisitionRunning == false) {
    _cycle = 0;
    _isAcquisitionRunning = true;
    SPI.beginTransaction(SPISettings(1920000, MSBFIRST, SPI_MODE1));

    //Set the AIN0+AIN1 as inputs manually
    digitalWrite(_CS_pin, LOW);  //CS must stay LOW during the entire sequence [Ref: P34, T24]
    SPI.transfer(0x50 | 1);      // 0x50 = WREG //1 = MUX
    SPI.transfer(0x00);
    SPI.transfer(DIFF_0_1);  //AIN0+AIN1
    digitalWrite(_CS_pin, HIGH);
    delay(50);
    digitalWrite(_CS_pin, LOW);  //CS must stay LOW during the entire sequence [Ref: P34, T24]
  } else {
  }

  if (_cycle < 4) {
    _outputValue = 0;
    //DRDY has to go low
    while (digitalRead(_DRDY_pin)) {};

    //Step 1. - Updating MUX
    switch (_cycle) {
      case 0:                    //Channel 2
        SPI.transfer(0x50 | 1);  // 0x50 = WREG //1 = MUX
        SPI.transfer(0x00);
        SPI.transfer(DIFF_2_3);  //AIN2+AIN3
        break;

      case 1:                    //Channel 3
        SPI.transfer(0x50 | 1);  // 0x50 = WREG //1 = MUX
        SPI.transfer(0x00);
        SPI.transfer(DIFF_4_5);  //AIN4+AIN5
        break;

      case 2:                    //Channel 4
        SPI.transfer(0x50 | 1);  // 0x50 = WREG //1 = MUX
        SPI.transfer(0x00);
        SPI.transfer(DIFF_6_7);  //AIN6+AIN7
        break;

      case 3:                    //Channel 1
        SPI.transfer(0x50 | 1);  // 0x50 = WREG //1 = MUX
        SPI.transfer(0x00);
        SPI.transfer(DIFF_0_1);  //AIN0+AIN1
        break;
    }

    SPI.transfer(0b11111100);  //SYNC
    delayMicroseconds(4);      //t11 delay 24*tau = 3.125 us //delay should be larger, so we delay by 4 us
    SPI.transfer(0b11111111);  //WAKEUP

    //Step 3.
    SPI.transfer(0b00000001);  //Issue RDATA (0000 0001) command
    delayMicroseconds(7);      //Wait t6 time (~6.51 us) REF: P34, FIG:30.


    _outputBuffer[0] = SPI.transfer(0);  // MSB
    _outputBuffer[1] = SPI.transfer(0);  // Mid-byte
    _outputBuffer[2] = SPI.transfer(0);  // LSB

    _outputValue = ((long)_outputBuffer[0] << 16) | ((long)_outputBuffer[1] << 8) | (_outputBuffer[2]);

    _cycle++;
    if (_cycle == 4) {
      _cycle = 0;
      //After the 4th cycle, we reset to zero so the next iteration reads the 1st MUX again
    }
  }

  return _outputValue;
}
