==> tamanegitaro/8BitDoArcadeStickUSBConverter/lib/ADS1256/ADS1256.cpp <==
#include "ADS1256.h"
#include <cstdio>
#include <math.h>
#include "hardware/sync.h"
#include "pico.h"
#include "pico/stdlib.h"
#define bitRead(value, bit) (((value) >> (bit)) & 0x01)
#define bitSet(value, bit) ((value) |= (1UL << (bit)))
#define bitClear(value, bit) ((value) &= ~(1UL << (bit)))
#define bitWrite(value, bit, bitvalue) (bitvalue ? bitSet(value, bit) : bitClear(value, bit))

void ADS1256::stopConversion() {
    waitForDRDY();               // SDATAC should be called after DRDY goes LOW (p35. Figure 33)

    _SPI->select(_CS_pin);
    _SPI->transfer(ADS1256_CMD_SDATAC);     // Send SDATAC to the ADC
    _SPI->deselect();            // We finished the command sequence, so we switch it back to HIGH
    _SPI->endTransaction();

    _isAcquisitionRunning = false; // Reset to false, so the MCU will be able to start a new conversion
}

void ADS1256::setGPIO(uint8_t dir0, uint8_t dir1, uint8_t dir2, uint8_t dir3) {
    _GPIO = readRegister(ADS1256_REG_IO); // Read the most recent value of the register

    // Default: 11100000 - DEC: 224 - Ref: p32 I/O section
    // Sets D3-D0 as input or output

    // Bit7: DIR3
    bitWrite(_GPIO, 7, dir3 == 1 ? 1 : 0); // D3 is input (default)
    //-----------------------------------------------------
    // Bit6: DIR2
    bitWrite(_GPIO, 6, dir2 == 1 ? 1 : 0); // D2 is input (default)
    //-----------------------------------------------------
    // Bit5: DIR1
    bitWrite(_GPIO, 5, dir1 == 1 ? 1 : 0); // D1 is input (default)
    //-----------------------------------------------------
    // Bit4: DIR0
    bitWrite(_GPIO, 4, dir0 == 1 ? 1 : 0); // D0 is input
    //-----------------------------------------------------

    writeRegister(ADS1256_REG_IO, _GPIO);
    sleep_ms(100);
}

void ADS1256::sendDirectCommand(uint8_t directCommand) {
    // Direct commands can be found in the datasheet Page 34, Table 24.
    _SPI->beginTransaction(_SPISpeed, _SPIBitOrder, _SPIMode);

    _SPI->select(_CS_pin); // REF: P34: "CS must stay low during the entire command sequence"
    sleep_us(5);
    _SPI->transfer(directCommand); // Send Command
    sleep_us(5);
    _SPI->deselect(); // REF: P34: "CS must stay low during the entire command sequence"

    _SPI->endTransaction();
}

void ADS1256::writeRegister(uint8_t registerAddress, uint8_t registerValueToWrite) {
    waitForDRDY();

    _SPI->beginTransaction(_SPISpeed, _SPIBitOrder, _SPIMode);
    _SPI->select(_CS_pin); // CS must stay LOW during the entire sequence [Ref: P34, T24]
    sleep_us(5); // see t6 in the datasheet
    _SPI->transfer(0x50 | registerAddress); // 0x50 = 01010000 = WREG
    _SPI->transfer(0x00); // 2nd (empty) command byte
    _SPI->transfer(registerValueToWrite); // pass the value to the register
    _SPI->deselect();
    _SPI->endTransaction();

    sleep_ms(100);
}

uint8_t ADS1256::readRegister(uint8_t registerAddress) {
    waitForDRDY();

    _SPI->beginTransaction(_SPISpeed, _SPIBitOrder, _SPIMode);
    // SPI_MODE1 = output edge: rising, data capture: falling; clock polarity: 0, clock phase: 1.
    _SPI->select(_CS_pin); // CS must stay LOW during the entire sequence [Ref: P34, T24]
    _SPI->transfer(0x10 | registerAddress); // 0x10 = 0001000 = RREG - OR together the two numbers (command + address)
    _SPI->transfer(0x00); // 2nd (empty) command byte
    sleep_us(5); // see t6 in the datasheet
    _registerValuetoRead = _SPI->transfer(0xFF); // read out the register value
    _SPI->deselect();
    _SPI->endTransaction();

    sleep_ms(100);
    return _registerValuetoRead;
}

uint32_t ADS1256::readSingle() {
    _SPI->beginTransaction(_SPISpeed, _SPIBitOrder, _SPIMode);
    _SPI->select(_CS_pin); // REF: P34: "CS must stay low during the entire command sequence"
    waitForDRDY();
    _SPI->transfer(ADS1256_CMD_RDATA); // Issue RDATA (0000 0001) command
    sleep_us(7);     // Wait t6 time (~6.51 us) REF: P34, FIG:30.

    _outputBuffer[0] = _SPI->transfer(0); // MSB
    _outputBuffer[1] = _SPI->transfer(0); // Mid-byte
    _outputBuffer[2] = _SPI->transfer(0); // LSB

    // Shifting and combining the above three items into a single, 24-bit number
    uint32_t _outputValue = ((uint32_t)_outputBuffer[0] << 16) | ((uint32_t)_outputBuffer[1] << 8) | (_outputBuffer[2]);

    _SPI->deselect(); // We finished the command sequence, so we set CS to HIGH
    _SPI->endTransaction();

    return (_outputValue);
}

uint32_t ADS1256::readSingleContinuous() {
    if (_isAcquisitionRunning == false) {
        _isAcquisitionRunning = true;
        _SPI->beginTransaction(_SPISpeed, _SPIBitOrder, _SPIMode);
        _SPI->select(_CS_pin); // REF: P34: "CS must stay low during the entire command sequence"
        waitForDRDY();
        _SPI->transfer(ADS1256_CMD_RDATAC); // Issue RDATAC (0000 0011)
        sleep_us(7);     // Wait t6 time (~6.51 us) REF: P34, FIG:30.
    }
    else {
        waitForDRDY();
    }

    _outputBuffer[0] = _SPI->transfer(0); // MSB
    _outputBuffer[1] = _SPI->transfer(0); // Mid-byte
    _outputBuffer[2] = _SPI->transfer(0); // LSB

    uint32_t _outputValue = ((uint32_t)_outputBuffer[0] << 16) | ((uint32_t)_outputBuffer[1] << 8) | (_outputBuffer[2]);

    return _outputValue;
}

uint32_t ADS1256::cycleSingle() {
    if(_isAcquisitionRunning == false) {
        _isAcquisitionRunning = true;
        _cycle = 0;
        _SPI->beginTransaction(_SPISpeed, _SPIBitOrder, _SPIMode);
        _SPI->select(_CS_pin); // CS must stay LOW during the entire sequence [Ref: P34, T24]
        _SPI->transfer(0x50 | 1); // 0x50 = WREG //1 = MUX
        _SPI->transfer(0x00);
        _SPI->transfer(ADS1256_SING_0); // AIN0+AINCOM
        _SPI->deselect();
        sleep_us(50);
        _SPI->select(_CS_pin);
    }
    else {}

    uint32_t _outputValue = 0;
    if (_cycle < 8) {
        waitForDRDY();
        // Step 1. - Updating MUX
        switch (_cycle) {
            // Channels are written manually
            case 0:                    // Channel 2
                _SPI->transfer(0x50 | 1); // 0x50 = WREG //1 = MUX
                _SPI->transfer(0x00);
                _SPI->transfer(ADS1256_SING_1); // AIN1+AINCOM
                break;

            case 1:                    // Channel 3
                _SPI->transfer(0x50 | 1); // 0x50 = WREG //1 = MUX
                _SPI->transfer(0x00);
                _SPI->transfer(ADS1256_SING_2); // AIN2+AINCOM
                break;

            case 2:                    // Channel 4
                _SPI->transfer(0x50 | 1); // 0x50 = WREG //1 = MUX
                _SPI->transfer(0x00);
                _SPI->transfer(ADS1256_SING_3); // AIN3+AINCOM
                break;

            case 3:                    // Channel 5
                _SPI->transfer(0x50 | 1); // 0x50 = WREG //1 = MUX
                _SPI->transfer(0x00);
                _SPI->transfer(ADS1256_SING_4); // AIN4+AINCOM
                break;

            case 4:                    // Channel 6
                _SPI->transfer(0x50 | 1); // 0x50 = WREG //1 = MUX
                _SPI->transfer(0x00);
                _SPI->transfer(ADS1256_SING_5); // AIN5+AINCOM
                break;

            case 5:                    // Channel 7
                _SPI->transfer(0x50 | 1); // 0x50 = WREG //1 = MUX
                _SPI->transfer(0x00);
                _SPI->transfer(ADS1256_SING_6); // AIN6+AINCOM
                break;

            case 6:                    // Channel 8
                _SPI->transfer(0x50 | 1); // 0x50 = WREG //1 = MUX
                _SPI->transfer(0x00);
                _SPI->transfer(ADS1256_SING_7); // AIN7+AINCOM
                break;

            case 7:                    // Channel 1
                _SPI->transfer(0x50 | 1); // 0x50 = WREG //1 = MUX
                _SPI->transfer(0x00);
                _SPI->transfer(ADS1256_SING_0); // AIN0+AINCOM
                break;
        }

        // Step 2.
        _SPI->transfer(ADS1256_CMD_SYNC); // SYNC
        // sleep_us(4);             // t11 delay 24*tau = 3.125 us //delay should be larger, so we delay by 4 us
        _SPI->transfer(ADS1256_CMD_WAKEUP); // WAKEUP

        // Step 3.
        // Issue RDATA (0000 0001) command
        _SPI->transfer(ADS1256_CMD_RDATA);
        sleep_us(7); // Wait t6 time (~6.51 us) REF: P34, FIG:30.

        _outputBuffer[0] = _SPI->transfer(0); // MSB
        _outputBuffer[1] = _SPI->transfer(0); // Mid-byte
        _outputBuffer[2] = _SPI->transfer(0); // LSB

        _outputValue = ((uint32_t)_outputBuffer[0] << 16) | ((uint32_t)_outputBuffer[1] << 8) | (_outputBuffer[2]);

        _cycle++; // Increase cycle - This will move to the next MUX input channel
        if (_cycle == 8) {
            _cycle = 0; // Reset to 0 - Restart conversion from the 1st input channel
        }
    }

    return _outputValue;
}

uint32_t ADS1256::cycleDifferential() {
    if (_isAcquisitionRunning == false) {
        _isAcquisitionRunning = true;
        _cycle = 0;
        _SPI->beginTransaction(_SPISpeed, _SPIBitOrder, _SPIMode);
        _SPI->select(_CS_pin); // CS must stay LOW during the entire sequence [Ref: P34, T24]
        _SPI->transfer(0x50 | 1); // 0x50 = WREG //1 = MUX
        _SPI->transfer(0x00);
        _SPI->transfer(ADS1256_DIFF_0_1); //AIN0+AINCOM
        _SPI->deselect();
        sleep_us(50);
        _SPI->select(_CS_pin);
    }

    uint32_t _outputValue = 0;
    if (_cycle < 4) {
        // DRDY has to go low
        waitForDRDY();

        // Step 1. - Updating MUX
        switch (_cycle) {
            case 0: //Channel 2
            _SPI->transfer(0x50 | 1); // 0x50 = WREG //1 = MUX
            _SPI->transfer(0x00);
            _SPI->transfer(ADS1256_DIFF_2_3);  //AIN2+AIN3
            break;

            case 1: //Channel 3
            _SPI->transfer(0x50 | 1); // 0x50 = WREG //1 = MUX
            _SPI->transfer(0x00);
            _SPI->transfer(ADS1256_DIFF_4_5); //AIN4+AIN5
            break;

            case 2: //Channel 4
            _SPI->transfer(0x50 | 1); // 0x50 = WREG //1 = MUX
            _SPI->transfer(0x00);
            _SPI->transfer(ADS1256_DIFF_6_7); //AIN6+AIN7
            break;

            case 3: //Channel 1
            _SPI->transfer(0x50 | 1); // 0x50 = WREG //1 = MUX
            _SPI->transfer(0x00);
            _SPI->transfer(ADS1256_DIFF_0_1); //AIN0+AIN1
            break;
        }

        _SPI->transfer(ADS1256_CMD_SYNC); // SYNC
        sleep_us(4);     // t11 delay 24*tau = 3.125 us //delay should be larger, so we delay by 4 us
        _SPI->transfer(ADS1256_CMD_WAKEUP); // WAKEUP

        // Step 3.
        _SPI->transfer(ADS1256_CMD_RDATA); // Issue RDATA (0000 0001) command
        sleep_us(7);     // Wait t6 time (~6.51 us) REF: P34, FIG:30.

        _outputBuffer[0] = _SPI->transfer(0); // MSB
        _outputBuffer[1] = _SPI->transfer(0); // Mid-byte
        _outputBuffer[2] = _SPI->transfer(0); // LSB

        _outputValue = ((uint32_t)_outputBuffer[0] << 16) | ((uint32_t)_outputBuffer[1] << 8) | (_outputBuffer[2]);

        _cycle++;
        if (_cycle == 4) {
            _cycle = 0;
            // After the 4th cycle, we reset to zero so the next iteration reads the 1st MUX again
        }
    }

    return _outputValue;
}
